Change transactions display

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -14,7 +14,8 @@ add_executable(app main.cpp
         accounts.h
         accounts.cpp
         mainScreen.h
-        mainScreen.cpp)
+        mainScreen.cpp
+)
 
 target_link_libraries(app ${RAYLIB_DIR}/lib/raylib.lib)
 
