Add base of the Monthly Budget Categories section

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -14,7 +14,9 @@ add_executable(app main.cpp
         accounts.h
         accounts.cpp
         mainScreen.h
-        mainScreen.cpp)
+        mainScreen.cpp
+        budgetCategories.cpp
+        budgetCategories.h)
 
 target_link_libraries(app ${RAYLIB_DIR}/lib/raylib.lib)
 
