Add update for budget

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -23,6 +23,7 @@ add_executable(app main.cpp
         export.h
         predictions.cpp
         predictions.h
+        budgetCategories.cpp
 )
 
 # Link libraries based on build type
